added contact us page

--- a/index.html
+++ b/index.html
@@ -508,7 +508,7 @@
                       <a class="nav-link" href="#"><i class="bi-people"></i>Team</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#"><i class="bi-telephone-inbound"></i>Contact Us</a>
+                    <a class="nav-link" href="./contact.html"><i class="bi-telephone-inbound"></i>Contact Us</a>
                 </li>
                   <li class="nav-item">
                       <a class="nav-link" href="https://www.osa.org/en-us/home/"><i class="bi-award"></i>OSA</a>
