--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   </head>
   <body>
     <!--PRELOADER STARTS-->
-    <div class="preloader">
+    <!-- <div class="preloader">
       <svg
         class="outer-space"
         width="1137"
@@ -481,7 +481,7 @@
           </defs>
         </svg>
       </div>
-    </div>
+    </div> -->
     <!--PRELOADER ENDS-->
 
     <div class="content">
