button and background

--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
           </div>
             <br>
           <div class="d-flex">
-            <a href="#about" class="btn-get-started scrollto">Get Started</a>
+            <a href="#about" class="btn-get-started scrollto p-4 border border-warning border-4 text-xl">Get Started</a>
           </div>
         </div>
         
@@ -584,7 +584,7 @@
           </div>
 
           <div class="row">
-            <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
+            <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
               <h3>Life As A Member</h3>
               <p class="fst-italic">
                 The JIIT-OSA Student Chapter is more than just a scientific community, it is a family . We train together, with general meetings, workshops, and industry visits. We learn and grow together, from learning new scientific phenomena to creating computer simulations. But we also hang out together, with team dinners and a yearly retreat. Our members have many opportunities to be involved beyond just workshops , including in the organization of our annual conference on Optics & Photonics held in the month of November, outreach events to NGOs and other colleges, and travel opportunities at international conferences.
