--- a/index.html
+++ b/index.html
@@ -488,7 +488,7 @@
 <!--NAVBAR STARTS-->
       <section>
         <nav class="navbar navbar-expand-custom navbar-mainbg">
-        <a  class="navbar-brand navbar-logo" href="#hero"><img src="img/osa.png" class="logo" alt="logo" width="120px" height="31px"></a>
+        <a  class="navbar-brand navbar-logo" href="#hero"><img src="img/osa.png" class="logo" alt="logo" width="265px" height="80px"></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <i class="bi-list"></i>
           </button>
@@ -573,7 +573,7 @@
   
           <div class="row">
             <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
-              <img src="img/1.png" class="img-fluid" alt="">
+              <img src="img/1.png" class="img-fluid" alt="Team-members1">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
               <h3>Our Community</h3>
@@ -584,20 +584,20 @@
           </div>
 
           <div class="row">
-            <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
+            <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
               <h3>Life As A Member</h3>
               <p class="fst-italic">
                 The JIIT-OSA Student Chapter is more than just a scientific community, it is a family . We train together, with general meetings, workshops, and industry visits. We learn and grow together, from learning new scientific phenomena to creating computer simulations. But we also hang out together, with team dinners and a yearly retreat. Our members have many opportunities to be involved beyond just workshops , including in the organization of our annual conference on Optics & Photonics held in the month of November, outreach events to NGOs and other colleges, and travel opportunities at international conferences.
               </p>
             </div>
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="80">
-              <img src="img/A1.jpg" class="img-fluid" alt="">
+              <img src="img/A1.jpg" class="img-fluid" alt="Team-members2">
             </div>
           </div>
 
           <div class="row">
             <div class="col-lg-6" data-aos="fade-right" data-aos-delay="100">
-              <img src="img/A2.jpg" class="img-fluid" alt="">
+              <img src="img/A2.jpg" class="img-fluid" alt="Team-members3">
             </div>
             <div class="col-lg-6 pt-4 pt-lg-0 content d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="100">
               <h3>Life After OSA</h3>
